--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -27,6 +27,20 @@ jobs:
         pip install cogbooks
 
     - name: Run cogbooks on pushed files
+      run: cogbooks AudioSignalBasics.md
+      
+    - name: commit files
       run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add -A
+        git commit -m "update data" -a
+      
+    - name: push changed files
+      uses: ad-m/github-push-action@v0.6.0
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: main 
+      
         
 
