--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -26,8 +26,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install cogbooks
 
-    - name: Run cogbooks on pushed files
-      run: cogbooks AudioSignalBasics.md
+    - name: Run cogbooks on test files
+      run: cogbooks AudioSignalBasics.md --force
       
     - name: commit files
       run: |
