--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -26,6 +26,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install cogbooks
 
+    - name: get files in all commits since last push --> store in env var CHANGED_FILES
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - run: echo "CHANGED_FILES=$(git diff --name-only ${{ github.event.before }}..${{ github.event.after }})" >> $GITHUB_ENV
+    
     - name: Run cogbooks on test files
       run: cogbooks AudioSignalBasics.md --force
       
@@ -34,7 +40,7 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add -A
-        git commit -m "update data" -a
+        git commit -m "auto-updated student notebooks" -a
       
     - name: push changed files
       uses: ad-m/github-push-action@v0.6.0
