--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -26,11 +26,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install cogbooks
 
-    - name: get files in all commits since last push --> store in env var CHANGED_FILES
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - run: echo "CHANGED_FILES=$(git diff --name-only ${{ github.event.before }}..${{ github.event.after }})" >> $GITHUB_ENV
+    # - name: get files in all commits since last push --> store in env var CHANGED_FILES
+    #   uses: actions/checkout@v2
+    #   with:
+    #     fetch-depth: 0
+    # - run: echo "CHANGED_FILES=$(git diff --name-only ${{ github.event.before }}..${{ github.event.after }})" >> $GITHUB_ENV
 
     - name: Run cogbooks on test files
       run: cogbooks AudioSignalBasics.md --force
