--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -44,8 +44,8 @@ jobs:
     # - run: echo ${{ steps.file_changes_output_files }}
 
 
-    - name: Run cogbooks on test files
-      run: cogbooks AudioSignalBasics.md --force
+    # - name: Run cogbooks on test files
+    #   run: cogbooks AudioSignalBasics.md --force
 
     - name: commit files
       run: |
