--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -47,6 +47,8 @@ jobs:
     # - name: Run cogbooks on test files
     #   run: cogbooks AudioSignalBasics.md --force
 
+    # changed to force workflow
+
     - name: commit files
       run: |
         git config --local user.email "action@github.com"
