--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -39,25 +39,24 @@ jobs:
     #       cogbooks ${changed_file} --force;
     #     done
 
-    # - id: file_changes
-    #   uses: trilom/file-changes-action@v1.2.4
-    # - run: echo ${{ steps.file_changes_output_files }}
+    - id: file_changes
+      uses: trilom/file-changes-action@v1.2.4
+    - run: echo ${{ steps.file_changes_output_files }}
 
 
     # - name: Run cogbooks on test files
     #   run: cogbooks AudioSignalBasics.md --force
 
-    # changed to force workflow
 
-    - name: commit files
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add -A
-        git commit -m "auto-updated student notebooks" -a
-
-    - name: push changed files
-      uses: ad-m/github-push-action@v0.6.0
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: main
+    # - name: commit files
+    #   run: |
+    #     git config --local user.email "action@github.com"
+    #     git config --local user.name "GitHub Action"
+    #     git add -A
+    #     git commit -m "auto-updated student notebooks" -a
+    #
+    # - name: push changed files
+    #   uses: ad-m/github-push-action@v0.6.0
+    #   with:
+    #     github_token: ${{ secrets.GITHUB_TOKEN }}
+    #     branch: main
