--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -29,7 +29,8 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - run: echo "CHANGED_FILES=$(git diff --name-only ${{ github.event.before }}..${{ github.event.after }})" >> $GITHUB_ENV
+    # - run: echo "CHANGED_FILES=$(git diff --name-only ${{ github.event.before }}..${{ github.event.after }})" >> $GITHUB_ENV
+    - run: echo "$(git diff --name-only ${{ github.event.before }}..${{ github.event.after }})"
 
     # - name: get updated and new files (take 2)
     #   id: files
