adding back the commit and push with error supression

--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -48,15 +48,15 @@ jobs:
     # - name: Run cogbooks on single file
     #   run: cogbooks AudioSignalBasics.md --force
 
-    # - name: commit files
-    #   run: |
-    #     git config --local user.email "action@github.com"
-    #     git config --local user.name "GitHub Action"
-    #     git add -A
-    #     git commit -m "auto-updated student notebooks" -a
-    #
-    # - name: push changed files
-    #   uses: ad-m/github-push-action@v0.6.0
-    #   with:
-    #     github_token: ${{ secrets.GITHUB_TOKEN }}
-    #     branch: main
+    - name: commit files
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add -A
+        git diff-index --quiet HEAD || git commit -m "auto-updated student notebooks" -a
+
+    - name: push changed files
+      uses: ad-m/github-push-action@v0.6.0
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: main
