--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -5,9 +5,9 @@ name: Demo Cogbooks
 
 on:
   push:
-    branches: [ main ]
-      paths:
-      - 'website_src'
+    # branches: [ main ]
+    paths:
+    - 'website_src'
 
 jobs:
   build:
