--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -5,9 +5,9 @@ name: Demo Cogbooks
 
 on:
   push:
-    # branches: [ main ]
-    paths:
-    - 'website_src'
+    branches: [ main ]
+    # paths:
+    # - 'website_src'
 
 jobs:
   build:
@@ -38,31 +38,28 @@ jobs:
       #   for changed_file in $(git diff --name-only ${{ github.event.before }}..${{ github.event.after }}); do
       #     echo "${changed_file} was updated.";
       #   done
+      #
 
-      # ------------ TOGGLE THIS TO RUN COGBOOKS ON ALL ------------
+      # ------------ TOGGLE THIS TO RUN COGBOOKS BY DIR ------------
       # Cogbooks Syntax --dir out_directory
       #
-      # if [[ ${changed_file} == *"/Audio"*]]; then
-      #     cogbooks ${changed_file} --force --dir docs/Audio
-      # elif [[ ${changed_file} == *"/Video"*]]; then
-      #     cogbooks ${changed_file} --force --dir docs/Video
-      # elif [[ ${changed_file} == *"/Language"*]]; then
-      #     cogbooks ${changed_file} --force --dir docs/Language
-      # elif [[ ${changed_file} == *"/Math_Materials"*]]; then
-      #     cogbooks ${changed_file} --force --dir docs/Math_Materials
-      # fi
       run: |
         for changed_file in $(git diff --name-only ${{ github.event.before }}..${{ github.event.after }}); do
-          cogbooks ${changed_file} --force;
+          if [[ ${changed_file} == *"/Audio"*]]; then
+              cogbooks ${changed_file} --force --dir test_outputs/Audio
+          elif [[ ${changed_file} == *"/Video"*]]; then
+              cogbooks ${changed_file} --force --dir test_outputs/Video
+          elif [[ ${changed_file} == *"/Language"*]]; then
+              cogbooks ${changed_file} --force --dir test_outputs/Language
+          elif [[ ${changed_file} == *"/Math_Materials"*]]; then
+              cogbooks ${changed_file} --force --dir test_outputs/Math_Materials
+          fi
         done
-
-    # - name: get updated and new files (take 2)
-    #   id: files
-    #   uses: jitterbit/get-changed-files@v1
-    # - run: |
-    #     for changed_file in ${{ steps.files.outputs.all }}; do
-    #       cogbooks ${changed_file} --force;
-    #     done
+      # ------------ TOGGLE THIS TO RUN COGBOOKS ON ALL ------------
+      # run: |
+      #   for changed_file in $(git diff --name-only ${{ github.event.before }}..${{ github.event.after }}); do
+      #     cogbooks ${changed_file} --force;
+      #   done
 
     # - name: Run cogbooks on single file
     #   run: cogbooks AudioSignalBasics.md --force
