--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -45,13 +45,17 @@ jobs:
       #
       run: |
         for changed_file in $(git diff --name-only ${{ github.event.before }}..${{ github.event.after }}); do
-          if [[ ${changed_file} == *"/Audio"*]]; then
+          if [[ ${changed_file} == *"/Audio"*]]
+          then
               cogbooks ${changed_file} --force --dir test_outputs/Audio
-          elif [[ ${changed_file} == *"/Video"*]]; then
+          elif [[ ${changed_file} == *"/Video"*]]
+          then
               cogbooks ${changed_file} --force --dir test_outputs/Video
-          elif [[ ${changed_file} == *"/Language"*]]; then
+          elif [[ ${changed_file} == *"/Language"*]]
+          then
               cogbooks ${changed_file} --force --dir test_outputs/Language
-          elif [[ ${changed_file} == *"/Math_Materials"*]]; then
+          elif [[ ${changed_file} == *"/Math_Materials"*]]
+          then
               cogbooks ${changed_file} --force --dir test_outputs/Math_Materials
           fi
         done
