--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -46,22 +46,22 @@ jobs:
       run: |
         for changed_file in $(git diff --name-only ${{ github.event.before }}..${{ github.event.after }})
         do
-          if [[ ${changed_file} == *"/Audio"*]]
+          if [[ ${changed_file} -eq *"/Audio"*]]
           then
               cogbooks ${changed_file} --force --dir test_outputs/Audio
           fi
 
-          if [[ ${changed_file} == *"/Video"*]]
+          if [[ ${changed_file} -eq *"/Video"*]]
           then
               cogbooks ${changed_file} --force --dir test_outputs/Video
           fi
 
-          if [[ ${changed_file} == *"/Language"*]]
+          if [[ ${changed_file} -eq *"/Language"*]]
           then
               cogbooks ${changed_file} --force --dir test_outputs/Language
           fi
 
-          if [[ ${changed_file} == *"/Math_Materials"*]]
+          if [[ ${changed_file} -eq *"/Math_Materials"*]]
           then
               cogbooks ${changed_file} --force --dir test_outputs/Math_Materials
           fi
