added redundant credentials

--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -76,7 +76,7 @@ jobs:
         branch: main
 
     # ------------- COMMIT AND PUSH TO DEST REPO (NEW) -------------
-    # WWARNING - DELETES EVERYTHING IN DEST REPO AND REPLACES WITH SOURCE-DIR 
+    # WWARNING - DELETES EVERYTHING IN DEST REPO AND REPLACES WITH SOURCE-DIR
     - name: Push to student repository
       uses: cpina/github-action-push-to-another-repository@main
       env:
@@ -84,7 +84,9 @@ jobs:
       with:
         source-directory: 'test_outputs'
         destination-github-username: 'JuliusStein'
+        user-name: 'JuliusStein'
+        destination-repository-username: 'JuliusStein'
         destination-repository-name: 'GH_Actions_Output'
         user-email: juliusastein@gmail.com
-        commit-message: 'Automated student notebook update'
+        commit-message: Automated student notebook update
         target-branch: main
