--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -81,7 +81,7 @@ jobs:
       uses: cpina/github-action-push-to-another-repository@main
       env:
         # API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
-        API_TOKEN_GITHUB: ${{ secrets.GITHUB_TOKEN }}
+        API_TOKEN_GITHUB: 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
       with:
         source-directory: 'test_outputs'
         destination-github-username: 'JuliusStein'
