--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -80,8 +80,7 @@ jobs:
     - name: Push to student repository
       uses: cpina/github-action-push-to-another-repository@main
       env:
-        # API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
-        API_TOKEN_GITHUB: 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
+        API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
       with:
         source-directory: 'test_outputs'
         destination-github-username: 'JuliusStein'
