--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -31,25 +31,25 @@ jobs:
 
     - name: Run cogbooks on changed files
       # ------------ TOGGLE THIS TO ONLY ECHO FILENAMES ------------
-      # run: |
-      #   for changed_file in $(git diff --name-only ${{ github.event.before }}..${{ github.event.after }}); do
-      #     echo "${changed_file} was updated.";
-      #   done
-      #
-
-      # ------------ TOGGLE THIS TO RUN COGBOOKS BY DIR ------------
       run: |
         for changed_file in $(git diff --name-only ${{ github.event.before }}..${{ github.event.after }}); do
-          if [[ ${changed_file} == *"/Audio"* ]]; then
-              cogbooks ${changed_file} --force --dir test_outputs/Audio
-          elif [[ ${changed_file} == *"/Video"* ]]; then
-              cogbooks ${changed_file} --force --dir test_outputs/Video
-          elif [[ ${changed_file} == *"/Language"* ]]; then
-              cogbooks ${changed_file} --force --dir test_outputs/Language
-          elif [[ ${changed_file} == *"/Math_Materials"* ]]; then
-              cogbooks ${changed_file} --force --dir test_outputs/Math_Materials
-          fi
+          echo "${changed_file} was updated.";
         done
+      
+
+      # ------------ TOGGLE THIS TO RUN COGBOOKS BY DIR ------------
+      # run: |
+      #   for changed_file in $(git diff --name-only ${{ github.event.before }}..${{ github.event.after }}); do
+      #     if [[ ${changed_file} == *"/Audio"* ]]; then
+      #         cogbooks ${changed_file} --force --dir test_outputs/Audio
+      #     elif [[ ${changed_file} == *"/Video"* ]]; then
+      #         cogbooks ${changed_file} --force --dir test_outputs/Video
+      #     elif [[ ${changed_file} == *"/Language"* ]]; then
+      #         cogbooks ${changed_file} --force --dir test_outputs/Language
+      #     elif [[ ${changed_file} == *"/Math_Materials"* ]]; then
+      #         cogbooks ${changed_file} --force --dir test_outputs/Math_Materials
+      #     fi
+      #   done
 
       # ------------ TOGGLE THIS TO RUN COGBOOKS ON ALL ------------
       # run: |
