--- a/.github/workflows/demoCogbooks.yml
+++ b/.github/workflows/demoCogbooks.yml
@@ -40,13 +40,13 @@ jobs:
       # ------------ TOGGLE THIS TO RUN COGBOOKS BY DIR ------------
       run: |
         for changed_file in $(git diff --name-only ${{ github.event.before }}..${{ github.event.after }}); do
-          if [[ ${changed_file} == *"/Audio"* ]]; then
+          if [[ ${changed_file} == *"/Audio/Exercises"* ]]; then
               cogbooks ${changed_file} --force --dir test_outputs/Audio
               python renameFilesCogwewb.py ${changed_file}
-          elif [[ ${changed_file} == *"/Video"* ]]; then
+          elif [[ ${changed_file} == *"/Video/Exercises"* ]]; then
               cogbooks ${changed_file} --force --dir test_outputs/Video
               python renameFilesCogwewb.py ${changed_file}
-          elif [[ ${changed_file} == *"/Language"* ]]; then
+          elif [[ ${changed_file} == *"/Language/Exercises"* ]]; then
               cogbooks ${changed_file} --force --dir test_outputs/Language
               python renameFilesCogwewb.py ${changed_file}
           fi
